Changelog v5.1.44 (2024-01-12):
- Added "Reset To Default" in Sort Select

Changelog v5.1.43 (2024-01-10):
- Fanart now utilizes Title Language
- Info is now more consistent for Embeds
- Fixed the Source Type Option

Changelog v5.1.42 (2024-01-06):
- Small Database Fix

Changelog v5.1.41 (2024-01-06):
- Added Megacloud Solver
- Added More Info for Sources
- Added Audio Channels to Sort Category
- Added Debrid Provider to Sort Category
- Added Seeders to Sort Category
- Added Subtitles to Sort Category
- Added Multi-Audio as Sort Option
- Fixed H!Anime Streams(Requires Megacloud)
- Fixed Aniwave Streams from Hanging
- Fixed Small Subtitle Bug
- Remove Animix Temporarily  
- Relabeled Type to Source Type

Changelog v5.1.40 (2024-12-27):
- Readded Skip times from Aniwave

Changelog v5.1.39 (2024-12-25):
- Added More Subtitle Settings
- Added building playlist
- Added New Icons for Search
- Added Resume Indicators
- Recoded Subtitle and Audio Stuff
- Fixed Context menu playing items
- Fixed Exodus Theme Favorites Icons
- Fixed Resume Time
- Fixed Resolver Stuff

Changelog v5.1.38 (2024-12-22):
- Fixed Premiumize Cloud Files
- Used JSONRPC to set Player Setting
- Fixed Button Error with Sort Select

Changelog v5.1.37 (2024-12-19):
- Added Kitsu Episode Meta
- Improved Animetosho Scraping
- Improved Debrid Cloud Searching
- Improved Season Search
- Fixed Playback Issues
- Fixed Router
- Fixed Anime Calendar

Changelog v5.1.36 (2024-12-17):
- Discovered JSONRPC
- Improved Subtitle Code

Changelog v5.1.35 (2024-12-15):
- Quick Setting Fix for RD

Changelog v5.1.34 (2024-12-15):
- Added More TorBox Settings
- Alot of Debrid Fixes
- Recoded Resolver
- Fixed TorBox
- Fixed Playback Stuff
- More relabeling

Changelog v5.1.33 (2024-12-12):
- RD Fixes

Changelog v5.1.32 (2024-12-12):
- Forgot to fix an important Label

Changelog v5.1.31 (2024-12-12):
- Fix Debrid Auth
- Fix bug with Debrd Link
- Added Api Setting for TorBox
- Added Debrid-Link Status
