@@ -261,31 +261,60 @@ class Resolver(BaseWindow):
 
     def resolve_uncache(self, source):
         heading = f'{control.ADDON_NAME}: Cache Resolver'
-        f_string = (f"[I]{source['release_title']}[/I][CR]"
-                    f"[CR]"
-                    f"This source is not cached would you like to cache it now?")
-        if not control.getBool('uncached.autoruninforground'):
-            yesnocustom = control.yesnocustom_dialog(heading, f_string, "Cancel", "Run in Background", "Run in Forground")
-            if yesnocustom == -1 or yesnocustom == 2:
+
+        if source['debrid_provider'] == 'Alldebrid' or source['debrid_provider'] == 'Debrid-Link':
+            if source['debrid_provider'] == 'Alldebrid':
+                control.ok_dialog(heading, 'Cache Reolver Has not been added for Alldebrid')
+                return
+            else:
+                control.ok_dialog(heading, 'Cache Reolver Has not been added for Debrid-Link')
+                return
+
+        elif source['debrid_provider'] == 'TorBox':
+            f_string = (f"[I]{source['release_title']}[/I][CR]"
+                        f"[CR]"
+                        f"This source is not cached. Would you like to cache it in the Background?")
+
+            yesno = control.yesno_dialog(
+                heading, f_string, nolabel="Cancel", yeslabel="Run in Background"
+            )
+            if not yesno:
                 self.canceled = True
                 return
-            if yesnocustom == 0:
-                runbackground = True
-            elif yesnocustom == 1:
-                runbackground = False
-            else:
-                return
+            runbackground = True
+
         else:
-            runbackground = False
+            f_string = (f"[I]{source['release_title']}[/I][CR]"
+                        f"[CR]"
+                        f"This source is not cached. Would you like to cache it now?")
+
+            # Ensure the dialog is created and displayed properly
+            if not control.getBool('uncached.autoruninforground'):
+                yesnocustom = control.yesnocustom_dialog(
+                    heading, f_string, "Cancel", "Run in Background", "Run in Foreground", defaultbutton=xbmcgui.DLG_YESNO_YES_BTN
+                )
+                if yesnocustom == -1 or yesnocustom == 2:
+                    self.canceled = True
+                    return
+                if yesnocustom == 0:
+                    runbackground = True
+                elif yesnocustom == 1:
+                    runbackground = False
+                else:
+                    return
+            else:
+                runbackground = False
+
         api = self.resolvers[source['debrid_provider']]()
         try:
             resolved_cache = api.resolve_uncached_source(source, runbackground)
         except Exception as e:
             control.progressDialog.close()
             import traceback
-            control.ok_dialog(control.ADDON_NAME, f'error; {e}')
+            control.ok_dialog(control.ADDON_NAME, f'Error: {e}')
             control.log(traceback.format_exc(), 'error')
             return
+    
         if not resolved_cache:
             self.canceled = True
         return resolved_cache
