@@ -13,6 +13,8 @@ class SourceSelect(BaseWindow):
         super().__init__(xml_file, location, actionArgs=actionArgs)
         self.actionArgs = actionArgs
         self.sources = sources
+        self.displayed_sources = []  # List to maintain displayed sources
+        self.showing_uncached = False  # Track whether uncached sources are being shown
         self.rescrape = rescrape
         self.position = -1
         self.canceled = False
@@ -54,16 +56,19 @@ class SourceSelect(BaseWindow):
 
     def onInit(self):
         self.display_list = self.getControl(1000)
+        # Initially populate with only cached sources
+        cached_sources = [source for source in self.sources if source.get('cached') != False]
+        self.populate_sources(cached_sources)
+        self.setFocusId(1000)
+
+    def populate_sources(self, sources):
+        self.display_list.reset()
+        self.displayed_sources = sources  # Update the displayed sources list
         menu_items = []
-        for i in self.sources:
+        for i in sources:
             if not i:
                 continue
             menu_item = xbmcgui.ListItem('%s' % i['release_title'], offscreen=False)
-            # properties = {
-            #     'type': i['type'],
-            #     'debrid': i['debrid'],
-            #     'provider': i['provider'],
-            # }
             for info in list(i.keys()):
                 try:
                     value = i[info]
@@ -75,15 +80,32 @@ class SourceSelect(BaseWindow):
                     menu_item.setProperty(info, i[info])
             menu_items.append(menu_item)
             self.display_list.addItem(menu_item)
-        self.setFocusId(1000)
 
     def doModal(self):
         super(SourceSelect, self).doModal()
         return self.stream_link
+    
+    def handle_action(self, action_id):
+        # Implement the logic for handling the action here
+        # For now, you can just log the action_id
+        control.log(f"Action handled: {action_id}")
 
-    # def onClick(self, controlId):
-    #     if controlId == 1000:
-    #         self.handle_action(7)
+
+    def onClick(self, controlId):
+        if controlId == 15:  # View Uncached button
+            if self.showing_uncached:
+                cached_sources = [source for source in self.sources if source.get('cached') != False]
+                self.populate_sources(cached_sources)
+                self.getControl(15).setLabel("View Uncached")
+                self.showing_uncached = False
+            else:
+                uncached_sources = [source for source in self.sources if source.get('cached') == False]
+                self.populate_sources(uncached_sources)
+                self.getControl(15).setLabel("View Cached")
+                self.showing_uncached = True
+        elif controlId == 1000:
+            # No need to call handle_action(7) here since onAction already handles it
+            pass
 
     def onAction(self, action):
         actionID = action.getId()
@@ -110,11 +132,11 @@ class SourceSelect(BaseWindow):
             if context == 0:  # Play
                 self.resolve_item()
             elif context == 1:  # Download
-                if self.sources[self.position]['debrid_provider'] == 'Local-Debrid' or self.sources[self.position]['debrid_provider'] == '':
+                if self.displayed_sources[self.position]['debrid_provider'] == 'Local-Debrid' or self.displayed_sources[self.position]['debrid_provider'] == '':
                     control.notify(control.ADDON_NAME, "Please Select A Debrid File")
                 else:
                     self.close()
-                    source = [self.sources[self.display_list.getSelectedPosition()]]
+                    source = [self.displayed_sources[self.display_list.getSelectedPosition()]]
                     self.actionArgs['play'] = False
                     if control.getSetting('general.dialog') == '5':
                         return_data = Resolver('resolver_az.xml', control.ADDON_PATH, actionArgs=self.actionArgs, source_select=True).doModal(source, {}, False)
@@ -124,18 +146,18 @@ class SourceSelect(BaseWindow):
                         Manager().download_file(return_data['link'])
 
             elif context == 2:  # File Selection
-                if not self.sources[self.position]['debrid_provider']:
+                if not self.displayed_sources[self.position]['debrid_provider']:
                     control.notify(control.ADDON_NAME, "Please Select A Debrid File")
                 else:
                     self.resolve_item(True)
 
     def resolve_item(self, pack_select=False):
         if control.getBool('general.autotrynext') and not pack_select:
-            sources = self.sources[self.position:]
+            sources = self.displayed_sources[self.position:]
         else:
-            sources = [self.sources[self.position]]
+            sources = [self.displayed_sources[self.position]]
         if self.rescrape:
-            selected_source = self.sources[self.position]
+            selected_source = self.displayed_sources[self.position]
             selected_source['name'] = selected_source['release_title']
         self.actionArgs['close'] = self.close
         if control.getSetting('general.dialog') == '5':
